# smart-bi

./: .env.example  .gitignore  .secrets.toml  Dockerfile  Dockerfile.dev  README.md  app.py  build.sh  config.py  context.md  docker-compose.yml  init.sql  pyproject.toml  requirements.txt  run.sh  streamlit_error.md  worklog.md
.claude/: settings.local.json
.streamlit/: config.toml  secrets.toml.example
data/: 0765d2cb-2e7d-4ff1-8da5-c0afe461ab18.json  09b02fb9-d320-4ff6-a603-669d47ad4d5f.json  0ac4e4f2-69a7-43c9-bcdf-ae732aea161e.json  0c9073dd-a895-4c28-82f0-4cee4563d16a.json  0ed66950-24d1-4176-b0f0-2329efaccbc4.json  12718fe3-07e6-4438-99f6-c8ec6032c8b2.json  127b7f86-24bc-4130-95da-be3f1cfb825f.json  12c72662-f2b1-4167-9ca2-c09aeaba229e.json  140364b0-2b0f-46ba-b980-0d953da94a68.json  156145a3-49d9-42c1-9ad5-3487bd0e7f13.json  15a3126b-897e-415c-96ca-61c1e1275507.json  173b6319-7729-4ef1-b4e2-69251f6aed77.json  18e0caa6-4b43-4808-abcf-f2924749cb58.json  198767fe-2e4e-47f1-ab40-95f4c65e061e.json  1d7b79bd-6427-446f-adfb-4c1c2547e351.json  208a772f-335a-49e8-a611-1fb3e0796b01.json  21e40506-debb-41d9-8cb3-323785a97bfa.json  22eeccf4-22de-4152-944f-4103e20d8f8c.json  252af218-828b-4966-b9a2-be6f42e33804.json  26b9176c-2de4-4e8f-a9e1-dab5a56ea16d.json  272e313f-99ab-494c-8565-f1fd2ad57bb0.json  30c9cff9-506e-483f-97b4-13dc2ead50a5.json  36670893-0fb6-4299-9826-66ccea1da9a8.json  3a93213d-5fa4-4ba5-945e-c20c8dfd9df4.json  3b77d4f5-39b1-4bdb-b043-1f1d35431315.json  471b76e4-13b1-433e-94c9-d6552ea75ffe.json  48ba713c-1fbd-4aaf-a5bd-143884307289.json  49452e2b-f0b8-4eed-ad7b-73c18f79c5c0.json  4be1825e-1bc1-4a23-bac0-61c53aea6853.json  511f8304-e80b-421e-9073-b03c2a0825e9.json  522f5e49-4798-4f35-bf76-feabc33c2f52.json  55fd0ab4-5c08-4579-97e1-6323bc89fbe7.json  574205f1-21da-4132-a906-65739e2e94c4.json  59d991ab-b5d6-4876-8137-e0c8ddd15d25.json  5a918dd8-a458-4dd2-96b7-400db7ef2838.json  5c29ff68-45ad-4f99-9e70-6f1bbbe27d0a.json  5c41ed61-3ed5-44db-b585-63d9ae687ad1.json  5d2bc785-2d1e-479c-a664-3a5407694ca7.json  615f5475-495a-485f-852e-6ae40e5f5e09.json  667978af-80e2-46e1-a7e0-d5e4b5be80f9.json  (+44 more)
domain/: __init__.py  entities.py  repositories.py  value_objects.py
download/: Planilha_Pokémon_para_Projeto_de_Dados_20260421_214751.html  Planilha_Pokémon_para_Projeto_de_Dados_20260421_214843.html  Planilha_Pokémon_para_Projeto_de_Dados_20260421_214900.tex
infrastructure/: __init__.py  chart_factory.py  database.py  models.py  pdf_generator.py
infrastructure/auth/: __init__.py  jwt_handler.py  password_handler.py
infrastructure/repositories/: __init__.py  analysis_repository.py  dashboard_repository.py  file_repository.py  session_repository.py  user_repository.py
infrastructure/storage/: __init__.py  s3_client.py
presentation/: __init__.py  auth_service.py  canvas.py  components.py  login.py  sidebar.py  widget_palette.py  widgets.py
templates/: report.tex.j2  slides.tex.j2
use_cases/: __init__.py  analysis_service.py  auth_service.py  dashboard_service.py  data_service.py  export_service.py  file_service.py
utils/: __init__.py  session_state.py
