[project]
name = "smartxl"
version = "1.0.0"
description = "A Streamlit application for building dashboards from Excel data with Clean Architecture"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Dashboard Builder Team", email = "team@dashboard-builder.com" }
]
keywords = ["streamlit", "dashboard", "excel", "data-visualization", "clean-architecture"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    # Streamlit Framework
    "fastexcel>=0.11.0",
    "streamlit>=1.28.0",
    # Data Processing
    "polars>=0.19.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "xlsx2csv>=0.8.0",
    # Database
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.12.0",
    # Visualization
    "plotly>=5.17.0",
    "kaleido>=0.2.0",
    # PDF Generation
    "reportlab>=4.0.0",
    # Authentication & Security
    "pyjwt>=2.8.0",
    "passlib>=1.7.4",
    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.0",
    # HTTP & API
    "httpx>=0.25.0",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.23.0",
]

[dependency-groups]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",

    # Code Quality
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "flake8>=6.1.0",
    "ruff>=0.1.0",

    # Type Stubs
    "types-python-dateutil>=2.8.0",
    "types-passlib>=1.7.0",
]

[project.scripts]
dashboard-builder = "app:main"

[project.urls]
Homepage = "https://github.com/isaacgfarias/smart-bi"
Documentation = "https://dashboard-builder.readthedocs.io"
Repository = "https://github.com/isaacgfarias/smart-bi"
Issues = "https://github.com/isaacgfarias/smart-bi/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["domain", "use_cases", "infrastructure", "presentation"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["domain", "use_cases", "infrastructure", "presentation"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip = [".venv", "migrations"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["migrations", "tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests that require database connection",
]

[tool.coverage.run]
source = ["domain", "use_cases", "infrastructure", "presentation"]
branch = true
omit = ["tests/*", "migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
