[project]
name = "gurgels-bi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "polars>=0.20.0",
    "openpyxl>=3.1.2",
    "xlsx2csv>=0.8.2",
    "plotly>=5.18.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "Jinja2>=3.1.2",
    "latex>=0.7.0",
    "reportlab>=4.0.0",
    "Pillow>=10.0.0",
    "pydantic>=2.5.0",
    "python-dateutil>=2.8.2",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "kaleido>=0.2.1",
    "streamlit>=1.55.0",
    "fastexcel>=0.19.0",
    "pypdf2>=3.0.1",
]
